created content for link pages

--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PepsiVsCoke</title>
+</head>
+<body>
+    <a href="/pepsi.html">Pepsi</a>
+    <a href="/coke.html">Coke</a>
+    <div>
+        <h1>Pepsi vs. Coca-Cola</h1>
+        <p>Pepsi vs. Coke is one of the most heated debates in the foodie industry.</p>
+        <a id="CocaColaSports">Coke Sports Sponsorships</a>
+        <p>Find out which is the preferred softdrink as of Jan 2022<a href="https://www.tasteofhome.com/article/coke-vs-pepsi-cola-taste-test/" > here.</a>
+    </div>
+    <div>
+        <p>Though I'm not much of a soda drinker, Pepsi is better. If you think you can convince me otherwise, contact me below:</p>
+    </div>
+    <div>
+        <a href="mailto:me@google.com">email</a><br>
+        <a href="tel:7807654321">phone</a>
+    </div>
+</body>
+</html>
