completed coke page anchor tag

--- a/coke.html
+++ b/coke.html
@@ -12,8 +12,8 @@
     </div>
     <div>
         <h1>Coca-Cola Facts and History</h1>
-        <p>Whether you're a soda drinker or not, you've seen the Pepsi or Coke logos. They are huge sponsors in sports.</p><br>
-        <a href="#CokeSports">Coke Sports Sponsorships</a>
+        <p>Whether you're a soda drinker or not, you've seen the Pepsi or Coke logos. They are huge sponsors in sports.</p>
+        <a href="#CocaColaSports">Coke Sports Sponsorships</a>
         <p>Coca-Cola, or Coke, is a carbonated soft drink manufactured by the Coca-Cola Company. Originally
             marketed as a temperance drink and intended as a patent medicine, it was invented in the late
             19th century by John Stith Pemberton in Atlanta, Georgia. In 1888, Pemberton sold Coca-Cola's
@@ -40,7 +40,11 @@
     </div>
     <div>
         <h4>Coke logo history</h4>
-        <img src="https://assets.turbologo.com/blog/en/2019/08/19084735/coca-cola-logo-evolution.jpg" width="800">
+        <img src="https://assets.turbologo.com/blog/en/2019/08/19084735/coca-cola-logo-evolution.jpg" width="800" alt="Picture of Coke logos from 1886 to 2007">
+    </div>
+    <div>
+        <h4>Refurbished Coca-Cola ad from 1973 on display in Louisiana.</h4>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f6/Coca_Cola_ad_ca._1943_IMG_3744.JPG/220px-Coca_Cola_ad_ca._1943_IMG_3744.JPG" alt="Picture of Coke ad on a brick wall in Louisiana.">
     </div>
     <div>
         <h4 id="CocaColaSports">Sport Sponsorships</h4>
