added anchor tags to go back to top

--- a/coke.html
+++ b/coke.html
@@ -11,9 +11,11 @@
         <a href="/index.html">Home</a>
     </div>
     <div>
-        <h1>Coca-Cola Facts and History</h1>
+        <h1 id="coketop">Coca-Cola Facts and History</h1>
         <p>Whether you're a soda drinker or not, you've seen the Pepsi or Coke logos. They are huge sponsors in sports.</p>
-        <a href="#CocaColaSports">Coke Sports Sponsorships</a>
+        <p>Go to
+            <a href="#CocaColaSports">Coke Sports Sponsorships</a>
+        </p>
         <p>Coca-Cola, or Coke, is a carbonated soft drink manufactured by the Coca-Cola Company. Originally
             marketed as a temperance drink and intended as a patent medicine, it was invented in the late
             19th century by John Stith Pemberton in Atlanta, Georgia. In 1888, Pemberton sold Coca-Cola's
@@ -98,6 +100,9 @@
             Lake Golf Club in Atlanta, GA.</p>
             
         <p>Coca-Cola which has been a partner with UEFA since 1988.</p>
+        <p>Go to the
+            <a href="#coketop">Top</a>
+        </p>
     </div>
     
 </body>
