--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p>Find out which is the preferred softdrink as of Jan 2022<a href="https://www.tasteofhome.com/article/coke-vs-pepsi-cola-taste-test/" > here.</a>
     </div>
     <div>
-        <p>Though I'm not much of a soda drinker, Pepsi is better. If you think you can convince me otherwise, contact me below:</p>
+        <p>Though I'm not much of a soda drinker, Pepsi is better. If you think you can convince me otherwise, contact me below. Be prepared.</p>
     </div>
     <div>
         <a href="mailto:me@google.com">email</a><br>
